--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>canvas基本用法</title>
+  <title>canvas-line demo</title>
   <style type="text/css">
   *{
     margin: 0;
